--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 body {
     background-image: url('https://cdn.discordapp.com/attachments/890279484140425326/1069992929193623603/PXL_20230131_124540028.jpg');
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
 } 
 
 </style>
