--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
-<style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Clyde</title>
+    <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/890279484140425326/1069992929193623603/PXL_20230131_124540028.jpg">
 
-body {
-    background-image: url('https://cdn.discordapp.com/attachments/890279484140425326/1069992929193623603/PXL_20230131_124540028.jpg');
-    background-size: contain;
-    background-repeat: no-repeat;
-} 
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-</style>
+        img {
+            width: 100vw;
+            height: 100vh;
+            object-fit: fill;
+        }
+    </style>
+</head>
+<body>
+    <img src="https://cdn.discordapp.com/attachments/890279484140425326/1069992929193623603/PXL_20230131_124540028.jpg" alt="clyde">
+</body>
+</html>
